fix: spacing

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
 }
 
 .blogblok{
-    padding:15rem 15rem 15rem 15rem;
+    padding:15rem 15rem 5rem 15rem;
 }
 
 .body-port{
